<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edit_course_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_course_code"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/edt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_note_title"
        android:inputType="textPersonName" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:gravity="end"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/cancle_btn"
            android:layout_width="wrap_content"
            android:layout_margin="9dp"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            />

        <TextView
            android:id="@+id/save_btn"
            android:layout_margin="9dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_handout"
            />

    </LinearLayout>

</LinearLayout>